# raftcpp

./: .gitmodules  CMakeLists.txt  README.md  auto_build.sh  build.sh
kvraft/: CMakeLists.txt  common.h  kv_clerk.cc  kv_clerk.h  kv_server.cc  kv_server.h
src/: CMakeLists.txt  args.pb.cc  args.pb.h  args.proto  polished_rpc_client.h  raft.cc  raft.h
tests/: CMakeLists.txt  config.cc  config.h  raft_backup_test.cc  raft_base_agree_test.cc  raft_fail_agree_test.cc  raft_fail_no_argee_test.cc  raft_initial_test.cc  raft_reelection_test.cc  raft_rejoin_test.cc  raft_test.cc
